Most of the Modules now working

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,16 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
+        height: 100vh;
+        margin: 0;
       }
       h1 {
-        background-color: #8080ff;
         color: black;
         display: inline-block;
         font-size: 2em;
-        margin: 0;
+        margin-left: 2px;
         padding: 10px;
+        margin-bottom: 10px;
       }
       #chatbox {
         margin-left: auto;
@@ -30,13 +32,27 @@
         margin-right: auto;
         width: 40%;
         margin-top: 60px;
+        display: flex;
+        align-items: center;
       }
       #textInput {
-        width: 90%;
-        border: none;
+        width: 95%;
+        border: 3px solid red;
+        border-radius: 9999em;
         border-bottom: 3px solid black;
         font-family: monospace;
         font-size: 17px;
+        padding: 5px;
+      }
+      #sendButton {
+        background-color: #8080ff;
+        color: white;
+        border: none;
+        padding: 10px;
+        margin-left: 10px;
+        font-size: 17px;
+        cursor: pointer;
+        border-radius: 50%;
       }
       .userText {
         color: black;
@@ -44,11 +60,13 @@
         font-size: 17px;
         text-align: right;
         line-height: 30px;
+        margin-bottom: 10px;
       }
       .userText span {
         background-color: #e699ff;
         padding: 10px;
-        border-radius: 2px;
+        border-radius: 20px;
+        display: inline-block;
       }
       .botText {
         color: black;
@@ -56,11 +74,13 @@
         font-size: 17px;
         text-align: left;
         line-height: 30px;
+        margin-bottom: 10px;
       }
       .botText span {
         background-color: #ffdd99;
         padding: 10px;
-        border-radius: 2px;
+        border-radius: 20px;
+        display: inline-block;
       }
       #tidbit {
         position: absolute;
@@ -68,34 +88,45 @@
         right: 0;
         width: 300px;
       }
-      .boxed {
+      .header {
+      margin-left: auto;
+        margin-right: auto;
+        width: 78%;
+        background-color: black;
+      }
+       .boxed {
         margin-left: auto;
         margin-right: auto;
         width: 78%;
         margin-top: 60px;
         border: 1px solid green;
+        overflow-y: auto;
+        max-height: 800px; /* Set a maximum height to enable scrolling within the container */
       }
       .box {
-        border: 2px solid black;
+        border: 2px solid red;
+        margin-bottom: 8px;
       }
     </style>
   </head>
   <body>
-    <center>
-      <h1>
-        Acacia ChatBot
-      </h1>
-    </center>
+
     <div class="box"></div>
     <div class="boxed">
+      <div class="header">
+        <h1>
+        Acacia Online
+      </h1>
+        </div>
       <div>
         <div id="chatbox">
           <p class="botText">
-            <span>Hi There! I'm Acacia. Feel free to ask me anything.</span>
+            <span>Hi There! I'm Acacia. Feel free to ask me anything. If you aren't sure where to start just type - Help me Acacia and I will help you get started</span>
           </p>
         </div>
         <div id="userInput">
-          <input id="textInput" type="text" name="msg" placeholder="Enter message here..." />
+          <input id="textInput" type="text" name="msg" placeholder="Talk To Acacia..." />
+          <button id="sendButton">&#8594;</button>
         </div>
       </div>
       <script>
@@ -108,18 +139,22 @@
             .getElementById("userInput")
             .scrollIntoView({ block: "start", behavior: "smooth" });
           $.get("/get", { msg: rawText }).done(function(data) {
-            var botHtml = '<p class="botText"><span>' + data + "</span></p>";
-            $("#chatbox").append(botHtml);
-            document
-              .getElementById("userInput")
-              .scrollIntoView({ block: "start", behavior: "smooth" });
-          });
+  console.log("Server response:", data);  // Debug print statement
+  var botHtml = '<p class="botText"><span>' + data + "</span></p>";
+  $("#chatbox").append(botHtml);
+  document
+    .getElementById("userInput")
+    .scrollIntoView({ block: "start", behavior: "smooth" });
+});
         }
+        $("#sendButton").click(function() {
+          getBotResponse();
+        });
         $("#textInput").keypress(function(e) {
           if (e.which == 13) {
             getBotResponse();
           }
-        });
+       });
       </script>
     </div>
   </body>
